# ecrad

./: CMakeLists.txt  Makefile_include.gfortran
.github/workflows/: build.yml
driver/: CMakeLists.txt  ecrad_driver.F90  ecrad_driver_config.F90  ecrad_driver_read_input.F90  ecrad_ifs_driver.F90  ecrad_ifs_driver_blocked.F90  ecrad_ifs_driver_field_api.F90  ifs_blocking.F90  ifs_blocking.fypp  radiation_scheme_layer.F90  radiation_scheme_layer.fypp  radintg_config.yaml
ifs/: CMakeLists.txt  field_config.py  ifs_blocking.F90  ifs_blocking.fypp  radiation_field_type_mod.F90  radiation_scheme.F90  radiation_scheme_layer.F90  radiation_scheme_layer.fypp  radiation_setup.F90  radintg_config.yaml
ifsaux/: CMakeLists.txt
ifsrrtm/: CMakeLists.txt  Makefile  rrtm_init_140gp.F90  rrtm_kgb1.F90  rrtm_kgb10.F90  rrtm_kgb11.F90  rrtm_kgb12.F90  rrtm_kgb13.F90  rrtm_kgb14.F90  rrtm_kgb15.F90  rrtm_kgb16.F90  rrtm_kgb2.F90  rrtm_kgb3.F90  rrtm_kgb4.F90  rrtm_kgb5.F90  rrtm_kgb6.F90  rrtm_kgb7.F90  rrtm_kgb8.F90  rrtm_kgb9.F90  srtm_kgb16.F90  srtm_kgb17.F90  srtm_kgb18.F90  srtm_kgb19.F90  srtm_kgb20.F90  srtm_kgb21.F90  srtm_kgb22.F90  srtm_kgb23.F90  srtm_kgb24.F90  srtm_kgb25.F90  srtm_kgb27.F90  srtm_kgb28.F90  srtm_kgb29.F90
include/: radiation_scheme.intfb.h
loki/: CMakeLists.txt  ecrad_loki.config
radiation/: CMakeLists.txt  radiation_aerosol_optics.F90  radiation_aerosol_optics_data.F90  radiation_cloud.F90  radiation_ecckd.F90  radiation_ecckd_interface.F90  radiation_gas.F90  radiation_general_cloud_optics.F90  radiation_general_cloud_optics_data.F90  radiation_ice_optics_baran.F90  radiation_ice_optics_baran2017.F90  radiation_ice_optics_fu.F90  radiation_ice_optics_yi.F90  radiation_ifs_rrtm.F90  radiation_interface.F90  radiation_liquid_optics_slingo.F90  radiation_liquid_optics_socrates.F90  radiation_lw_derivatives.F90  radiation_matrix.F90  radiation_monochromatic.F90  radiation_overlap.F90  radiation_random_numbers.F90  radiation_regions.F90  radiation_spectral_definition.F90  radiation_tripleclouds_lw.F90  radiation_two_stream.F90
test/ifs/: CMakeLists.txt  minimum_config.nam
utilities/: CMakeLists.txt
